<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/ly_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/img_poster">

            <TextView
                android:id="@+id/textFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nama_film"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly_1"
            android:layout_toRightOf="@id/img_poster"
            android:layout_marginLeft="2dp">

            <TextView
                android:id="@+id/textDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/deskripsi"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly_2"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/img_poster">

            <TextView
                android:id="@+id/textTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:text="@string/tanggal"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img_poster"
            android:layout_toRightOf="@id/img_poster"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_favorite"
                android:theme="@style/ButtonDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_detail"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_set_share"
                android:theme="@style/ButtonShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_share"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>